--- a/commands.html
+++ b/commands.html
@@ -165,6 +165,7 @@ l
                 <p><abbr aria-label="Returns a photo from r/wtf">/wtf</abbr></p>
                 <p><abbr aria-label="Returns global covid stats">/corona</abbr></p>
                 <p><abbr aria-label="Returns country covid stats">/corona [country name]</abbr></p>
+                <p><abbr aria-label="Clipboard to save images">/screenshot</abbr></p>
             </div>
         </div>
     </div>
