--- a/commands.html
+++ b/commands.html
@@ -166,6 +166,7 @@ l
                 <p><abbr aria-label="Returns global covid stats">/corona</abbr></p>
                 <p><abbr aria-label="Returns country covid stats">/corona [country name]</abbr></p>
                 <p><abbr aria-label="Clipboard to save images">/clipboard</abbr></p>
+                <p><abbr aria-label="Returns Country ISO codes">/iso [country]</abbr></p>
             </div>
         </div>
     </div>
