--- a/commands.html
+++ b/commands.html
@@ -124,8 +124,8 @@ l
                 <p><abbr aria-label="Searches [image], returns info">/anime search [image]</abbr></p>
                 <p><abbr aria-label="Searches [image], returns less info">/anime search quick [image]</abbr></p>
                 <p><abbr aria-label="Returns anime news">/animeNews [name]</abbr></p>
-                <!--<p><abbr aria-label="Returns a waifu">/waifu</abbr></p>-->
-                <!--<p><abbr aria-label="Returns a lewd">/lewd</abbr></p>-->
+                <p><abbr aria-label="Returns a waifu">/waifu</abbr></p
+                p><abbr aria-label="Returns a lewd">/lewd</abbr></p>
                 <p><abbr aria-label="Returns hentai">/hentai</abbr></p>
                 <p><abbr aria-label="Returns a gif">/pat @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/punch @user</abbr></p>
@@ -136,7 +136,7 @@ l
                 <p><abbr aria-label="Returns a gif">/cuddle @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/feed @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/tickle @user</abbr></p>
-                <!--<p><abbr aria-label="Returns a gif">/spank @user</abbr></p>-->
+                <p><abbr aria-label="Returns a gif">/spank @user</abbr></p>
             </div>
         </div>
     </div>
@@ -155,7 +155,7 @@ l
                 <p><abbr aria-label="Returns show data">/show [show name]</abbr></p>
                 <p><abbr aria-label="Returns now weather data">/weather [city], [country name/code]</abbr></p>
                 <p><abbr aria-label="Returns latest news from country">/news [country name/code]</abbr></p>
-                <!--<p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p>-->
+                <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p
                 <p><abbr aria-label="Saves [text]">/save [text]</abbr></p>
                 <p><abbr aria-label="Creates a simple poll">/poll [text]</p>
                 <p><abbr aria-label="Returns a photo">/photo</abbr></p>
