--- a/commands.html
+++ b/commands.html
@@ -126,7 +126,7 @@ l
                  <p><abbr aria-label="Guess The Anime Character">/guess</abbr></p>
                 <p><abbr aria-label="Returns anime news">/animeNews [name]</abbr></p>
                 <p><abbr aria-label="Returns a waifu">/waifu</abbr></p
-                p><abbr aria-label="Returns a lewd">/lewd</abbr></p>
+                <p><abbr aria-label="Returns a lewd">/lewd</abbr></p>
                 <p><abbr aria-label="Returns hentai">/hentai</abbr></p>
                 <p><abbr aria-label="Returns a gif">/pat @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/punch @user</abbr></p>
@@ -156,7 +156,7 @@ l
                 <p><abbr aria-label="Returns show data">/show [show name]</abbr></p>
                 <p><abbr aria-label="Returns now weather data">/weather [city], [country name/code]</abbr></p>
                 <p><abbr aria-label="Returns latest news from country">/news [country name/code]</abbr></p>
-                <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p
+                <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p>
                 <p><abbr aria-label="Saves [text]">/save [text]</abbr></p>
                 <p><abbr aria-label="Creates a simple poll">/poll [text]</p>
                 <p><abbr aria-label="Returns a photo">/photo</abbr></p>
