--- a/commands.html
+++ b/commands.html
@@ -125,7 +125,7 @@ l
                 <p><abbr aria-label="Searches [image], returns less info">/anime search quick [image]</abbr></p>
                  <p><abbr aria-label="Guess The Anime Character">/guess</abbr></p>
                 <p><abbr aria-label="Returns anime news">/animeNews [name]</abbr></p>
-                <p><abbr aria-label="Returns a waifu">/waifu</abbr></p
+                <p><abbr aria-label="Returns a waifu">/waifu</abbr></p>
                 <p><abbr aria-label="Returns a lewd">/lewd</abbr></p>
                 <p><abbr aria-label="Returns hentai">/hentai</abbr></p>
                 <p><abbr aria-label="Returns a gif">/pat @user</abbr></p>
