--- a/commands.html
+++ b/commands.html
@@ -169,6 +169,7 @@ l
                 <p><abbr aria-label="Returns country covid stats">/corona [country name]</abbr></p>
                 <p><abbr aria-label="Clipboard to save images">/clipboard</abbr></p>
                 <p><abbr aria-label="Returns Country ISO codes">/iso [country]</abbr></p>
+                <p><abbr aria-label="Returns PH logo styled text">/ph [text]</abbr></p>
             </div>
         </div>
     </div>
