--- a/commands.html
+++ b/commands.html
@@ -170,6 +170,7 @@ l
                 <p><abbr aria-label="Clipboard to save images">/clipboard</abbr></p>
                 <p><abbr aria-label="Returns Country ISO codes">/iso [country]</abbr></p>
                 <p><abbr aria-label="Returns PH logo styled text">/ph [text]</abbr></p>
+                 <p><abbr aria-label="Returns brazzers logo on IMG">/brazzers [link/user]</abbr></p>
             </div>
         </div>
     </div>
