--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <a type="button" onclick="window.location.href = 'https://discord.gg/qtqZCCf';" href="#"><span>Join My Server</span></a>
                 <a type="button" onclick="window.location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=605097967887712257&permissions=8&scope=bot';" href="#"><span>Invite Me To Yours</span></a>
                 <a type="button" href="commands.html"><span>All My Commands</span></a>
+                 <a type="button" onclick="window.location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=605097967887712257&permissions=650305&scope=bot';" href="#"><span>Invite w/ less perms</span></a>
                 
             </div>
             
