--- a/commands.html
+++ b/commands.html
@@ -170,7 +170,12 @@ l
                 <p><abbr aria-label="Clipboard to save images">/clipboard</abbr></p>
                 <p><abbr aria-label="Returns Country ISO codes">/iso [country]</abbr></p>
                 <p><abbr aria-label="Returns PH logo styled text">/ph [text]</abbr></p>
-                 <p><abbr aria-label="Returns brazzers logo on IMG">/brazzers [link/user]</abbr></p>
+                <p><abbr aria-label="Returns brazzers logo on IMG">/brazzers [link/user]</abbr></p>
+                <p><abbr aria-label="Slaps a rainbow onto an image">/rainbow [link/user]</abbr></p>
+                <p><abbr aria-label="Slaps 'glass' onto an image">/glass [link/user]</abbr></p>
+                <p><abbr aria-label="Wasted overlay onto an image">/wasted [link/user]</abbr></p>
+                <p><abbr aria-label="Triggered overlay onto an image">/triggered [link/user]</abbr></p>
+                <p><abbr aria-label="Creates a fake YT Comment">/ytComment [user] [comment]</abbr></p>
             </div>
         </div>
     </div>
