--- a/commands.html
+++ b/commands.html
@@ -154,8 +154,8 @@ l
                 <p><abbr aria-label="Bot 'talks' to you">/talk [query]</abbr></p>
                 <p><abbr aria-label="Returns movie data">/movie [movie name]</abbr></p>
                 <p><abbr aria-label="Returns show data">/show [show name]</abbr></p>
-                <p><abbr aria-label="Returns now weather data">/weather [city], [country name/code]</abbr></p>
-                <p><abbr aria-label="Returns latest news from country">/news [country name/code]</abbr></p>
+                <p><abbr aria-label="Returns now weather data">/weather [city], [cntry name/code]</abbr></p>
+                <p><abbr aria-label="Returns latest news from country">/news [cntry name/code]</abbr></p>
                 <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p>
                 <p><abbr aria-label="Saves [text]">/save [text]</abbr></p>
                 <p><abbr aria-label="Creates a simple poll">/poll [text]</p>
