--- a/commands.html
+++ b/commands.html
@@ -151,7 +151,8 @@ l
                 <h2>Misc. Commands</h2>
                 <pre> </pre>
                 <p><abbr aria-label="Answers your question">/ask [query]</abbr></p>
-                <p><abbr aria-label="Bot 'talks' to you">/talk [query]</abbr></p>
+                <p><abbr aria-label="Bot 'talks' to you">/chat [query]</abbr></p>
+                <p><abbr aria-label="Bot 'answers' you">/talk [query]</abbr></p>
                 <p><abbr aria-label="Returns movie data">/movie [movie name]</abbr></p>
                 <p><abbr aria-label="Returns show data">/show [show name]</abbr></p>
                 <p><abbr aria-label="Returns now weather data">/weather [city], [cntry name/code]</abbr></p>
