--- a/commands.html
+++ b/commands.html
@@ -155,6 +155,7 @@ l
                 <p><abbr aria-label="Returns movie data">/movie [movie name]</abbr></p>
                 <p><abbr aria-label="Returns show data">/show [show name]</abbr></p>
                 <p><abbr aria-label="Returns a youtube link">/yt [title] [comment]</abbr></p>
+                <p><abbr aria-label="Returns a gif">/gif [query]</abbr></p>
                 <p><abbr aria-label="Returns now weather data">/weather [city], [cntry name/code]</abbr></p>
                 <p><abbr aria-label="Returns latest news from country">/news [cntry name/code]</abbr></p>
                 <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p>
